--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+hello_world:
+  path: /hello-world
+  controller: App\Controller\HelloController::world
